[package]
name = "tg-feed-baseliner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
rust-tdlib = "0.3.0"
tokio = { version = "1.19.2", features = ["full"] }
